# physics-simulations

./: .gitignore  CMakeLists.txt  README.md
code/: main.cpp
code/header/gui/: WindowHandler.h
code/header/math/: Vector2D.h
code/header/simulation/: PhysicsEngine.h  PhysicsObjectDetails.h  PhysicsSceneHandler.h  SimulationConfig.h  SimulationStateMachine.h
code/header/simulation/objects/: RigidBody.h  RigidCircleBody.h  RigidRectangleBody.h
code/header/utils/: MathUtils.h  ObjectUtil.h
code/src/gui/: WindowHandler.cpp
code/src/math/: Vector2D.cpp  Vector2D.h
code/src/simulation/: Grid.cpp  Grid.h  PhysicsEngine.cpp  PhysicsObjectDetails.cpp  PhysicsSceneHandler.cpp  SimulationConfig.cpp  SimulationStateMachine.cpp
code/src/simulation/objects/: RigidCircleBody.cpp  RigidRectangleBody.cpp
code/src/utils/: MathUtils.cpp  ObjectUtil.cpp
scripts/: buildAndExecute.sh  createRecording.sh  setup.sh
